Changed call to use JSONP (fixes IE9 issue; thanks to sealless)
Signed-off-by: Miguel Guerreiro <miguel.guerreiro@gmail.com>

--- a/test.html
+++ b/test.html
@@ -12,10 +12,10 @@
 	<script>
 	$(function() {
 		$('#youtube-channel').youtubeChannel({
-			username: 'cmb79',
+			username: 'channelfireball',
 			startIndex: 1,
 			maxResults: 10,
-			orderBy: 'viewCount'
+			orderBy: 'published'
 		});
 	});
 	</script>
