Now returning "api" along with the jQuery object
The api object is now returned along it the jQuery object, so it can be accessed by other means than just from the callback function;
Re-factored some code to pass JS Lint (www.jslint.com)
Added comment with author, license, etc.

Signed-off-by: Miguel Guerreiro <miguel.guerreiro@gmail.com>

--- a/test.html
+++ b/test.html
@@ -12,9 +12,10 @@
     <h1></h1>
     <div id="youtube-channel"></div>
     <script>
+    var ytc;
     $(function() {
         var count = 2;
-        $('#youtube-channel').youtubeChannel({
+        ytc = $('#youtube-channel').youtubeChannel({
             username: 'nettutsplus',
             startIndex: 1,
             maxResults: 10,
@@ -34,6 +35,7 @@
                 }
             }
         });
+        console.log(ytc.api);
     });
     </script>
 </body>
