--- a/index.html
+++ b/index.html
@@ -40,38 +40,34 @@
 	  
 	  
           <div class="item">
-	    <img class="content" src="pics/don.png"/>
+	    <img class="content" href="#support" src="img/don.png"/>
             <div class="caption">Support Our Ministry</div>
           </div>
           <div class="item">
-            <img class="content" src="pics/con.png"/>
-            <div class="caption">Contact Us </div>
-          </div>
-          <div class="item">
-            <img class="content" src="pics/abo.png"/>
+            <img class="content" href="#about" src="img/logo.png"/>
             <div class="caption">About Us</div>
           </div>
           <div class="item">
-            <img class="content" src="pics/map.png"/>
+            <img class="content" href="#directions" src="img/map.png"/>
             <div class="caption">Direction</div>
           </div>	  
 
           <div class="item">
-            <img class="content" href="#sermons" src="pics/vid.png"/>
+            <img class="content" href="#sermons" src="img/vid.png"/>
             <div class="caption">Video Sermons</div>
           </div>
 
           <div class="item">
-            <img class="content" src="pics/pra.png"/>
+            <img class="content" href="#prayer" src="img/pra.png"/>
             <div class="caption">Prayer Wall</div>
           </div>
           <div class="item">
-            <img class="content" src="pics/cal.png"/>
+            <img class="content" src="img/cal.png"/>
             <div class="caption">Calendar of Events</div>
           </div>
           <div class="item">
-            <img class="content" src="pics/foc.png"/>
-            <div class="caption">Prayer Focus for the Week</div>
+            <img class="content" href="#bible" src="img/bible.png"/>
+            <div class="caption">Bible</div>
           </div>
           
 
@@ -94,7 +90,8 @@
   <div data-role="header">
     <h1>Sermon Videos</h1>
   </div> <!--/header-->
-
+  
+  <p><a href="#one" data-direction="reverse" data-role="button" data-theme="b">Back to page Menu</a></p>
   <div data-role="content" data-theme="a">
     <div id="youtube-channel"></div>
     <script>
@@ -124,15 +121,56 @@
         console.log(ytc.api);
     });
     </script><!-- /Youtube Channel Grabber -->
-
-        <p>Sermons will be here yo!</p>
-	<p><a href="#one" data-direction="reverse" data-role="button" data-theme="b">Back to page Menu</a></p>
+  <p><a href="#one" data-direction="reverse" data-role="button" data-theme="b">Back to page Menu</a></p>
   </div> <!--/content-->
 
   
 
 
 </div><!--/sermons page -->
+
+<!-- Start of the About Page -->
+<div data-role="page" id="about" data-theme="a">
+  <div data-role="header">
+    <h1>About Us</h1>
+  </div> <!--/header-->
+  <div data-role="content" data-theme="a">
+    <p><a href="#about" data-role="button" data-theme="b">About Our Church</a></p>
+    <p><a href="#pastorWall" data-role="button" data-theme="b">About Pastor Wall</a></p>
+    <p><a href="#one" data-role="button" data-theme="b">Main Menu</a></p>
+    <p>The Feast of the Lord, Inc. has been serving the Orangeburg, SC community since October 19, 2003. We are a non-denominational ministry, called to proclaim that deliverance is available by the power of God's Word through the demonstration of the Holy Ghost! Our ministry focus is the salvation of lost souls and imparting the power of God through the anointing of the Holy Spirit that God has graciously blessed us with in abundance.</p>
+
+    <p>The Feast of the Lord is blessed to have the International Fellowship Council of Churches with Bishop E. McDonald Wortham, Ph.D as our apostolic covering. The Lord has blessed our ministry with young prophets who are greatly used by the Holy Spirit in the Word of Knowledge, the Word of Wisdom, Prophecy and other Gifts of the Spirit. Thank you Heavenly Father and to You be all the glory!</p>
+  </div><!--/content-->
+</div> <!--/about -->
+
+<!-- Start of the About Page -->
+<div data-role="page" id="pastorWall" data-theme="a">
+  <div data-role="header">
+    <h1>About Us</h1>
+  </div> <!--/header-->
+  <div data-role="content" data-theme="a">
+    <p><a href="#about" data-role="button" data-theme="b">About Our Church</a></p>
+    <p><a href="#pastorWall" data-role="button" data-theme="b">About Pastor Wall</a></p>
+    <p><a href="#one" data-role="button" data-theme="b">Main</a></p>
+    <p>Shane Wall was born and resides in Orangeburg, S. C. He is the founder and pastor of The Feast of the Lord in Orangeburg, SC. He gave his heart to the Lord and was filled with the gift of the Holy Ghost at an early age. He began ministering the Word of God at fifteen. WPJK in Orangeburg approached him about being the Co-Producer of The Days Of Thy Youth radio program. He accepted.</p>
+    <p>Because of his ministry on the radio, invitations came from several churches and organizations for him to minister in their church services. In those and other services, the young and old came to the Lord, received the gift of the Holy Ghost, were delivered and healed spiritually and physically. Shane Wall, 44, has a unique anointing. God uses him to release favor on the lives of people. He has a dynamic teaching ministry that focuses on the revelations the Holy Spirit has given Him about Ecology in the Kingdom of God.</p>
+    <p>Shane Wall is the author of the book, What Are You Doing After the Dance? This book encourages the reader to continue a relationship with God faithfully, even after a desired miracle is received. God has blessed his book to reach International acclaim. Most recently, Pastor Wall released his first Gospel CD entitled, Conversations with God. This project encourages the listener to approach God in prayer in a conversational format. "Prayer is not a speech. Prayer should be a conversation." Each song on the CD (written by Pastor Wall) is either something God is saying to us or something we are saying to God. Local, national and International radio stations have included selections from Conversations with God on their daily playlists.</p>
+
+    <p>Pastor Wall has ministered the in Nassau, Bahamas; Jerusalem, Israel and in Nigeria, Africa.</p>
+    <p>Pastor Shane Wall is dedicated to ministry. Whether the need is one-on-one or international, he has experienced the awesome GLORY of the Lord throughout his over 27 years of ministering the Word of God. He believes, "Life is what God has given me to fulfill my calling." He has also been quoted saying, "I was not created for me; I was created by God to help others. God will take care of my needs."</p>
+    <p>So, why am I ...</p>
+
+    <p>...An Evangelist? God sends me out to minister His Word and to show His love, care and concern all over the world. There are those who need salvation, healing, deliverance and other miracles to take a permanent place in their lives.</p>
+    <p>...A Preacher? God needs those who have sold out to Him and answered His call to declare what He wants the world to know about Him! In fact, some only seek to learn about God's blessings, not His heart.</p>
+
+    <p>...A Prophet? God places me in the presence of a person or a congregation to be His mouthpiece. He trusts me to obey Him and not to take His glory as I walk in this office. He knows that when I open my mouth, I rely fully on Him to speak an accurate Word that is clear in meaning. I use God's wisdom for proper timing in delivering any prophetic Word.</p>
+    <p>...A Pastor? God called me to lead His people as I follow His leading. There are so many precious people who strongly desire to know God's purpose for their individual lives as well as God's purpose for His Church worldwide. As a leader I am to humble myself as a servant of the people that God would give me the anointing that He prepared for me to use while caring for His sheep and lambs. They are the congregation He has positioned me to faithfully lead after His heart.</p>
+
+    <p>I glorify God only for giving me the ability to minister. If the Lord speaks to you that I should come and minister, I look forward to the move of God that we will certainly experience and share together. shane@tfotl.com</p>
+  </div><!--/content-->
+</div> <!--/about -->
+
 
 
 
