--- a/android/assets/www/index.html
+++ b/android/assets/www/index.html
@@ -13,6 +13,7 @@
   <script src="js/cordova-1.5.0.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
   <script src="js/post.js"></script>
+  <script src="js/ABSBiblesearch.js"></script>
 
   <!--Cordova Initalization -->
   <script>
@@ -237,6 +238,9 @@
       	<a href="#one" data-icon="back" data-transition="none">Back</a> 
 	<h1>Bible</h1>
       </div> <!--/header-->
+
+
+
 
 
     </div><!--/bible-->
