--- a/android/assets/www/index.html
+++ b/android/assets/www/index.html
@@ -238,6 +238,31 @@
       	<a href="#one" data-icon="back" data-transition="none">Back</a> 
 	<h1>Bible</h1>
       </div> <!--/header-->
+ <div data-role="content" data-theme="a">
+
+<script>
+function getVersions()
+{
+var bsearch = plugins.absBiblesearch; // just to make access easier.
+bsearch.setKey(t1gka87pSJrjJM7Mkv7FaOg2IL23wyqCW3rvUYQg); // just do this once in your app initialization
+
+// at this point you are ready to make api calls.
+if (!bsearch.versionsByLanguage('eng-US', function(data) {
+    // data will now contain a JSON object.  To see an example of the content see the api documentation.
+    for (var i = 0; i < data.response.versions.length; i++) {
+        var version = data.response.versions[i];
+        alert(version.version + ': ' + version.name);
+    }    
+})) {
+    alert('error: ' + bsearch.lastError());
+}
+}
+</script>
+<input type="button" onclick="getVersions()" value="Print Versionsx">
+ </div><!--/content-->
+
+
+ 
 
 
 
