Added menu to map page

--- a/android/assets/www/index.html
+++ b/android/assets/www/index.html
@@ -218,10 +218,18 @@ api: "29de4157542f3df7ed96b09b6f5d0c47"
 	  }
 
 	</script>
-
-
-	
       </div> <!-- /content-->
+      
+      <div data-role="footer" data-id="nav" data-position="fixed">
+        <div data-role="navbar">
+          <ul>
+            <li><a href="#sermons">Sermons</a></li>
+            <li><a href="#map">Map</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#donate">Donate</a></li>
+          </ul>
+        </div><!-- /navbar -->
+      </div><!-- /footer -->
     </div> <!--/gmap-->
 
     <!--Start of Support Page: #donate-->
